# tumor-seg

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
models/segresnet_v1/: PREPROCESSING_SPEC.md  model.onnx
src/: main.cpp
src/core/: BraTSPreprocessor.cpp  BraTSPreprocessor.h  CaseLoader.cpp  CaseLoader.h  DisplayTransform.cpp  DisplayTransform.h  NiiVolumeLoader.cpp  NiiVolumeLoader.h  OverlaySettings.h  SliceExtractor.cpp  SliceExtractor.h  TensorRTInferenceEngine.cpp  TensorRTInferenceEngine.h  Volume.h
src/test/: test_inference.cpp
src/tools/: build_engine.cpp
src/ui/: SliceView.cpp
src/ui_qml/: Backend.cpp  Backend.h  SliceImageProvider.cpp  SliceImageProvider.h  main_qml.cpp
src/ui_qml/qml/: Main.qml
src/ui_widgets/: MainWindow.cpp  MainWindow.h  SliceView.h
